--- a/hackspace/public/index.html
+++ b/hackspace/public/index.html
@@ -22,6 +22,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+      <!-- FONT FAMILY -->
+    <link href="https://fonts.googleapis.com/css2?family=Iceland&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet"> 
+
     <title>React App</title>
   </head>
   <body>
