add module FadeIn , add font , replace Vignette by Citation , add ip horloge textAnimated footer , footer icon move , add search , review link color , add data

--- a/hackspace/public/index.html
+++ b/hackspace/public/index.html
@@ -8,7 +8,8 @@
       <!-- FONT FAMILY -->
     <link href="https://fonts.googleapis.com/css2?family=Iceland&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet"> 
-
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet"> 
     <title>WellCode</title>
   </head>
   <body>
